--- a/css/main.css
+++ b/css/main.css
@@ -5,11 +5,7 @@
     background-color: #f1f1f1;
 }
 
- @media (max-width: 480px) {
-     *{
-        background-color: #e2e2e2;
-     }
-        }
+
 
 html{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -28,6 +24,7 @@ html{
     text-align: center;
 }
 
+
 /* row1div1 */
 .container .row1{
     display: flex;
@@ -36,6 +33,8 @@ html{
     width: 100%;
     justify-content: space-between;
 }
+
+
 
 .r1{
     border-radius: 0 20px 0 20px;
@@ -57,6 +56,7 @@ html{
     
 }
 
+
 .btn{
     width: 30%;
     height: 30px;
@@ -65,6 +65,47 @@ html{
 .btn:hover{
     background-color: plum;
     height: 35px;
+}
+
+@media (max-width: 480px) {
+    * {
+        background-color: #d3d3d3;
+    }
+
+        .container .row1{
+            /* display: flex; */
+            text-align: center;
+            min-height: 160px;
+             width: 100%;
+            justify-content: space-between;
+        }
+
+        .row1 .r1{
+    
+            /* align-items: center; */
+            justify-content: center;
+            /* margin: 10px; */
+            width: 100%;
+        }
+        
+        .row1 .r1 img{
+            width: 100%;
+            height: auto;
+            border: 1px solid plum;
+            
+        }
+        
+        
+        .btn{
+        
+            border-radius: 15px;
+            width: 100%;
+        }
+        .btn:hover{
+            background-color: plum;
+            height: 35px;
+        }
+    
 }
 /* row1div2 */
 .container .row2{
@@ -85,6 +126,44 @@ html{
     width: 70%;
     height: auto;
     border: 1px solid plum;
+    
+}
+
+@media (max-width: 480px) {
+
+        .container .row2{
+            /* display: flex; */
+            text-align: center;
+            min-height: 160px;
+             width: 100%;
+            justify-content: space-between;
+        }
+
+        .row2 .r1{
+    
+            /* align-items: center; */
+            justify-content: center;
+            /* margin: 10px; */
+            width: 100%;
+        }
+        
+        .row2 .r1 img{
+            width: 100%;
+            height: auto;
+            border: 1px solid plum;
+            
+        }
+        
+        
+        .btn{
+        
+            border-radius: 15px;
+            width: 100%;
+        }
+        .btn:hover{
+            background-color: plum;
+            height: 35px;
+        }
     
 }
 /* row1div3 */
@@ -109,7 +188,7 @@ html{
     
 }
 
-/* row2div1 */
+/* row3div1 */
 .container .row3{
     display: flex;
     text-align: center;
@@ -118,7 +197,7 @@ html{
     justify-content: space-between;
 }
 
-.row1 .r1{
+.row3 .r1{
     border: 1px solid green;
     align-items: center;
     justify-content: center;
@@ -135,6 +214,49 @@ html{
     background-color: plum;
     height: 35px;
 }
+
+
+@media (max-width: 480px) {
+    * {
+        background-color: #d3d3d3;
+    }
+
+        .container .row3{
+            /* display: flex; */
+            text-align: center;
+            min-height: 160px;
+             width: 100%;
+            justify-content: space-between;
+        }
+
+        .row3 .r1{
+    
+            /* align-items: center; */
+            justify-content: center;
+            /* margin: 10px; */
+            width: 100%;
+        }
+        
+        .row3 .r1 img{
+            width: 100%;
+            height: auto;
+            border: 1px solid plum;
+            
+        }
+        
+        
+        .btn{
+        
+            border-radius: 15px;
+            width: 100%;
+        }
+        .btn:hover{
+            background-color: plum;
+            height: 35px;
+        }
+    
+}
+
 .footer{
     text-align: center;
 }
